--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -3,7 +3,7 @@
 replicaCount: 1
 
 image:
-  repository: sureshkiran/petclinic
+  repository: sureshkiran/my-pet:latest
   tag: latest
   pullPolicy: IfNotPresent
 
